--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
               alt=""
             />
             <p>
-              I'm Proficient at Javascript which makes me allow to create
+              I'm Proficient at Javascript which allows to create
               user-interactive websites.
             </p>
           </div>
@@ -87,10 +87,24 @@
           </div>
         </div>
       </div>
-
+    </div>
     <div class="bottom-container">
-      <div class="questions"> <input type="text" name="" id=""></div>
-      <div class="contact"></div>
+      <hr>
+      <div class="contact">
+        <h1>Contact Me</h1>
+        <p>orrakmehmeteren@gmail.com</p>
+        <a href="https://www.linkedin.com/in/mehmet-eren-ortak/" target="_blank"
+          ><img src="assets/images/linkedin.png" alt=""
+        /></a>
+        <a href=""
+          ><img src="" alt="" target="_blank" /><img
+            src="assets/images/Instagram-Icon.png"
+            alt=""
+        /></a>
+        <a href="https://github.com/mehmetortk" target="_blank"
+          ><img src="assets/images/GitHub-Logo.png" alt=""
+        /></a>
+      </div>
     </div>
   </body>
 </html>
